--- a/educacio/WebContent/formulariosignin.html
+++ b/educacio/WebContent/formulariosignin.html
@@ -7,29 +7,12 @@
 <body>
 <form method="post" action="Signin">
 <h1>Formulario</h1>
-     Nombre: <INPUT TYPE="TEXT" NAME="nombre"><BR>
-     Primer Apellido:<INPUT TYPE="TEXT" NAME="apellido1"><BR>
-     Segundo Apellido:<INPUT TYPE="TEXT" NAME="apellido2"><BR>
+     Nom: <INPUT TYPE="TEXT" NAME="nom"><BR>
+     Edat:<INPUT TYPE="NUMBER" NAME="edat"><BR>
+     Grup:<INPUT TYPE="NUMBER" NAME="grup"><BR>
      <hr>
-     Correo electronico: <INPUT TYPE="TEXT" NAME="email"><BR>
-     Clave: <INPUT TYPE="PASSWORD" NAME="clave"><BR>
+     Password: <INPUT TYPE="PASSWORD" NAME="password"><BR>
      <hr>
-     Comentario: <TEXTAREA NAME="comenta" ROWS=3 COLS=40>
-                 </TEXTAREA><BR>
-     <hr>
-     Sexo:<BR> 
-	  <INPUT TYPE="RADIO" NAME="sexo" VALUE="hombre">Hombre<BR>
-          <INPUT TYPE="RADIO" NAME="sexo" VALUE="mujer">Mujer<BR>
-
-     Areas de interés:<br>
-  	  <SELECT NAME="intereses" MULTIPLE>
-	 	<OPTION>Informatica</OPTION>
-	  	<OPTION>Derecho</OPTION>
-		<OPTION>Matematicas</OPTION>
-		<OPTION>Fisica</OPTION>
-		<OPTION>Musica</OPTION>
-	  </SELECT>
-
       <center><input type="submit" value="Enviar"></center>
 </form>
 </body>
