afegides funcionalitats de consultar Persona

--- a/educacio/WebContent/formulario.html
+++ b/educacio/WebContent/formulario.html
@@ -6,10 +6,9 @@
 </head>
 <body>
 <form method="post" action="RecuperacionUsuario">
-Ingrese nombre de usuario:
-<input type="text" name="usuario" size="20"><br>
-Ingrese clave:
-<input type="password" name="clave" size="20"><br>
+	id: <INPUT TYPE="NUMBER" NAME="nom"><BR>
+    password:<INPUT TYPE="TEXT" NAME="password"><BR>
+
 <input type="submit" value="confirmar">
 </form>
 </body>
